# ce_sens

./: README.md  pyproject.toml
src/ce_sens/: detectors.ini  utils.py
src/ce_sens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ce_sens/data/: PE_CE40-CE20-0.h5  PE_CE40-CE20-1.h5  PE_CE40-CE20-2.h5  PE_CE40-CE20-3.h5  PE_CE40-CE20-4.h5  PE_CE40-CE20-5.h5  PE_CE40-CE20-6.h5
src/ce_sens/data/BBH/: PE_CE40-CE20-0.h5  PE_CE40-CE20-1.h5  PE_CE40-CE20-2.h5  PE_CE40-CE20-3.h5
src/ce_sens/data_create/: data_create.py  sample.py
src/ce_sens/data_create/config_files/: o1o2o3_lvk_bbh_upper_5Hz.ini  o1o2o3_lvk_bns_upper_5Hz.ini
src/ce_sens/data_create/injection_files/: o1o2o3_lvk_bbh_upper_2Hz.ini  o1o2o3_lvk_bns_upper_2Hz.ini
src/ce_sens/early_warning/: early_warning.py  early_warning_calc.py
src/ce_sens/pe_test/: bound_check.py  distance.py  ks_test.py  mchirp.py  priors.py  snr_check.py
src/ce_sens/post_merger/: bbh_pm.py  bns_pm_calc.py  bns_postmerger.py
src/ce_sens/snr_calc/: snr.py  snr_calc.py
