[project]
name = "ce_sens"
version = "0.0.1"
authors = [
  { name="Aleyna Akyuz", email="aakyuz@syr.edu" },
]
description = "Early warning and dynamical switching of Cosmic Explorer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "matplotlib==3.7.3",
  "matplotlib-inline==0.1.6",
  "numpy==1.23.5",
  "pycbc==2.4.0",
  "h5py==3.9.0",
  "tqdm==4.66.1",
  "sympy==1.12"
]
    
[project.scripts]
data_create = "ce_sens.data_create.data_create:data_create"
early_warning_calc = "ce_sens.early_warning.early_warning_calc:early_warning_calc"
snr_calc = "ce_sens.snr_calc.snr_calc:snr_calc"
bns_pm_calc = "ce_sens.pm.bns_pm_calc:bns_pm_calc"

[project.urls]
"Homepage" = "https://github.com/aleynaakyuz/ce_sens"
"Bug Tracker" = "https://github.com/aleynaakyuz/ce_sens/issues"
